# XBurner

./: .gitignore  Cargo.toml  README.md  example.yml  rustfmt.toml
src/: device.rs  executor.rs  input.rs  keycode.rs  main.rs  notification.rs  output.rs
src/config/: config.rs  mod.rs  parser.rs
src/handler/: default.rs  echo.rs  mod.rs
src/x11/: client.rs
