[package]
name = "XBurner"
version = "0.1.2"
edition = "2024"
description = "Advanced Keyboard Manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
evdev = "0.13.2"
indexmap = { version = "2.13.0", features = ["serde"] }
lazy_static = "1.5.0"
libc = "0.2.180"
log = "0.4.29"
nix = { version = "0.31.1", features = ["feature", "process", "poll"] }
# nix = { version = "0.26.2" }
notify-rust = "4.11.7"
serde = {version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
signal-hook = "0.4.1"
termcolor = "1.4.1"
x11rb = "0.13.2"
